--- a/Cracking-the-Coding-Interview-unresolved.ipynb
+++ b/Cracking-the-Coding-Interview-unresolved.ipynb
@@ -924,7 +924,7 @@
     "\n",
     "`Input:`\n",
     "\n",
-    "<img src=\"./4_9.png\" width=25% height=25% />\n",
+    "![4_9.png](./4_9.png)\n",
     "\n",
     "`Output: {2, 1, 3}, {2, 3, 1}`\n",
     "\n",
