--- a/Cracking-the-Coding-Interview-unresolved.ipynb
+++ b/Cracking-the-Coding-Interview-unresolved.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Cracking the Coding Interview\n",
     "\n",
-    ">*Aviso legal: Este cuaderno recoge los ejercicios de la sexta edición del libro \"Cracking the code interview\" de Gayle Laakmann McDowell a solo efectos de investigación personl. Todos los derechos pertenecen al autor.*\n",
+    ">*Aviso legal: Este cuaderno recoge los ejercicios de la sexta edición del libro \"Cracking the code interview\" de Gayle Laakmann McDowell a solo efectos de investigación personal. Todos los derechos pertenecen al autor.*\n",
     "\n",
     "> *Disclaimer: This notebook collects all exercises from the sixth edition of the book \"Cracking the code interview\" by Gayle Laakmann McDowell for the sole purpose of personal investigation. All rights belong to the author.*"
    ]
@@ -126,7 +126,7 @@
     "\n",
     "EXAMPLE\n",
     "\n",
-    "`Input: Tact Coa`\n",
+    "`Input: ‏‏‎ ‎Tact Coa`\n",
     "\n",
     "`Output: True (permutations: \"taco cat\", \"atco cta\", etc.)`\n",
     "\n",
@@ -346,7 +346,7 @@
     "\n",
     "EXAMPLE\n",
     "\n",
-    "`Input: the node c from the linked list a -> b -> c -> d -> e -> f`\n",
+    "`Input: ‏‏‎ ‎the node c from the linked list a -> b -> c -> d -> e -> f`\n",
     "\n",
     "`Result: nothing is returned, but the new linked list looks like a -> b -> d -> e -> f`\n",
     "\n",
@@ -379,7 +379,7 @@
     "\n",
     "EXAMPLE\n",
     "\n",
-    "`Input: 3 -> 5 -> 8 -> 5 -> 10 -> 2 -> 1 [partition=5]`\n",
+    "`Input: ‏‏‎ ‎3 -> 5 -> 8 -> 5 -> 10 -> 2 -> 1 [partition=5]`\n",
     "\n",
     "`Output: 3 -> 1 -> 2 -> 10 -> 5 -> 5 -> 8`\n",
     "\n",
@@ -410,7 +410,7 @@
     "\n",
     "EXAMPLE\n",
     "\n",
-    "`Input: (7-> 1 -> 6) + (5 -> 9 -> 2). That is, 617 + 295`\n",
+    "`Input: ‏‏‎ ‎(7-> 1 -> 6) + (5 -> 9 -> 2). That is, 617 + 295`\n",
     "\n",
     "`Output: 2 -> 1 -> 9. That is, 912`\n",
     "\n",
@@ -420,7 +420,7 @@
     "\n",
     "EXAMPLE\n",
     "\n",
-    "`Input: (6 -> 1 -> 7) + (2 -> 9 -> 5).That is, 617 + 295`\n",
+    "`Input: ‏‏‎ ‎(6 -> 1 -> 7) + (2 -> 9 -> 5).That is, 617 + 295`\n",
     "\n",
     "`Output: 9 -> 1 -> 2, That is, 912`\n",
     "\n",
