--- a/Cracking-the-Coding-Interview-unresolved.ipynb
+++ b/Cracking-the-Coding-Interview-unresolved.ipynb
@@ -11,7 +11,7 @@
     "\n",
     ">*Aviso legal: Este cuaderno recoge los ejercicios de la sexta edición del libro \"Cracking the code interview\" de Gayle Laakmann McDowell a solo efectos de investigación personal. Todos los derechos pertenecen al autor.*\n",
     "\n",
-    "> *Disclaimer: This notebook collects all exercises from the sixth edition of the book \"Cracking the code interview\" by Gayle Laakmann McDowell for the sole purpose of personal investigation. All rights belong to the author.*"
+    "> *Disclaimer: This notebook collects all exercises from the sixth edition of the book \"Cracking the code interview\" by Gayle Laakmann McDowell for the sole purpose of personal investigation. All rights belong to the author.*\n"
    ]
   },
   {
