--- a/Cracking-the-Coding-Interview-unresolved.ipynb
+++ b/Cracking-the-Coding-Interview-unresolved.ipynb
@@ -157,7 +157,7 @@
     "\n",
     "EXAMPLE\n",
     "\n",
-    "`pale, pie -> true`\n",
+    "`pale, ple -> true`\n",
     "\n",
     "`pales, pale -> true`\n",
     "\n",
